# whisper.cpp

./: build-optimized-apple-silicon.sh  install-menubar-app.sh  populate_db.sql  start-whisper-talk.sh  test-change.md  whisper_talk.db  whisper_talk.db-shm  whisper_talk.db-wal
examples/: CMakeLists.txt
examples/talk-llama/: CMakeLists.txt  README.md  audio-pipeline.cpp  audio-pipeline.h  audio-processor-interface.h  audio-processor-main.cpp  audio-processor-service.cpp  audio-processor-service.h  audio-stream-processor.cpp  audio-stream-processor.h  audio-transport-service.h  database.cpp  database.h  http-api.cpp  http-api.h  http-server.cpp  jitter-buffer.h  rtp-packet.h  simple-audio-processor.cpp  simple-audio-processor.h  simple-http-api.cpp  simple-http-api.h  sip-client-main.cpp  sip-client.cpp  sip-client.h  stt-interface.h  talk-llama.cpp  tts-engine.h  tts-engine.mm  whisper-connector.cpp  whisper-connector.h  whisper-service.cpp  whisper-service.h  whisper-standalone-service.h
examples/talk-llama/web-frontend/: app.js  dashboard.css  dashboard.html  index.html  index.php
